# MicroRAG

./: .env.example  .gitignore  README.md  app.py  config.yaml  pyproject.toml  reproduce.md  requirements.txt  test.py  test2.py
data/benchmark/: qa.csv  qa.xlsx
experiments/: analysis.py  runner.py  runner2.py  runner2_copy.py  runner2_copy_2.py
rag_micro/: config.py  rag_cli.py  run_experiments.py
rag_micro/eval/: noise_eval.py  qa_eval.py  qa_eval_v2.py  retrieval_eval.py  significance.py
rag_micro/experiments/: runner.py
rag_micro/ingest/: build_corpus.py  build_corpus_v2.py  chunker.py  chunker_v2.py  noise.py  pdf_to_text.py
rag_micro/llm/: llama_cpp_backend.py  ollama_backend.py  openai_backend.py  stub.py
rag_micro/retrievers/: bm25_whoosh.py  embedders.py  faiss_dense.py  hybrid.py  hybrid_v2.py  reranker.py  splade_sparse.py  unicoil_sparse.py
scripts/: auto_sync_remote_results.sh  bootstrap.sh  generate_q1_figures.py  plot_publication_figures.py  reindex_corpus.py  run_extended_sota_experiments.py  run_full_sota_experiments.py  run_sota_experiments.py
